Document JDWP Agent_OnAttach limitation and update tests
Clarifies in documentation, code comments, and test setup that HotSpot's JDWP agent cannot be loaded dynamically due to the lack of Agent_OnAttach in all supported JDKs (11–23). Updates DEBUGGER.md, pom.xml, and all debugger test classes to explain the necessity of launching external debuggee JVMs with JDWP pre-enabled, preventing future regressions from attempts to use dynamic attach. Adds explicit warnings and rationale for contributors and maintainers.